update to github links

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                                     <p>One of my earlier applications; your basic Tic-Tac-Toe game.  This was a React App written in Javascript with some CSS styling.  This was an oppurtunity to utilize "props" and "state" to manage the board.  My favorite part of this game was the figuring out the algorithm to determine a winner.</p>
                                     <!-- <p><strong>Github Repo:</strong><a href="https://github.com/jpletner/Rails-To-Do-App" target="_blank"> github.com/jpletner/Rails-To-Do-App</a></p>
                                     <p><strong>URL:</strong><a href="https://guarded-stream-2315.herokuapp.com/tasks" target="_blank"> Tic-Tac-Toe Game</a></p> -->
-                                    <p><strong>Github Repo:</strong><a href="https://google.com" target="_blank"> google.com</a></p>
+                                    <p><strong>Github Repo:</strong><a href="https://github.com/crgjr66/tic-tac-toe" target="_blank"> github.com/crgjr66/tic-tac-toe</a></p>
                                     <p><strong>URL:</strong><a href="https://google.com" target="_blank"> Tic-Tac-Toe Game</a></p>
                                     <ul class="list-inline">
                                        <li><strong>Date:</strong> September 2020</li>
@@ -417,7 +417,7 @@
                                     <p>Standard Madlib game that utilizes a React Form to manage the input data and pass it up to the main application.  Internally, this app also selects from 3 different stories before displaying the resulting paragraph.</p>
                                     <!-- <p><strong>Github Repo:</strong><a href="https://github.com/jpletner/Rails-To-Do-App" target="_blank"> github.com/jpletner/Rails-To-Do-App</a></p>
                                     <p><strong>URL:</strong><a href="https://guarded-stream-2315.herokuapp.com/tasks" target="_blank"> Tic-Tac-Toe Game</a></p> -->
-                                    <p><strong>Github Repo:</strong><a href="https://google.com" target="_blank"> google.com</a></p>
+                                    <p><strong>Github Repo:</strong><a href="https://github.com/crgjr66/madlibs" target="_blank"> github.com/crgjr66/madlibs</a></p>
                                     <p><strong>URL:</strong><a href="https://google.com" target="_blank"> Madlibs Word Game</a></p>
                                     <ul class="list-inline">
                                        <li><strong>Date:</strong> September 2020</li>
@@ -451,7 +451,7 @@
                                     <p>A Full-Stack Ruby on Rails application that allows users to Create, Read, Update, and Delete blogs.  There are some simple validations of the title in order to keep them unique. Blogs are stored in a database and access to the database is handled by the routes, views, and controller methods.</p>
                                     <!-- <p><strong>Github Repo:</strong><a href="https://github.com/jpletner/Rails-To-Do-App" target="_blank"> github.com/jpletner/Rails-To-Do-App</a></p>
                                     <p><strong>URL:</strong><a href="https://guarded-stream-2315.herokuapp.com/tasks" target="_blank"> Tic-Tac-Toe Game</a></p> -->
-                                    <p><strong>Github Repo:</strong><a href="https://google.com" target="_blank"> google.com</a></p>
+                                    <p><strong>Github Repo:</strong><a href="https://github.com/crgjr66/baseball_blog" target="_blank"> github.com/crgjr66/baseball_blog</a></p>
                                     <p><strong>URL:</strong><a href="https://google.com" target="_blank"> Baseball Blog</a></p>
                                     <ul class="list-inline">
                                        <li><strong>Date:</strong> October 2020</li>
