centered about me text and added blank targets for github and linkedin so they open in new page

--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
                   <img src="assets/img/linkedin_crgjr.jpg" alt="" height="200px" width="200px">
                   <h4>Chuck Gilbreth Jr.</h4>
                   <p class="text-muted">Current Student LEARN Academy</p>
-                  <a class="btn btn-dark btn-social mx-2" href="https://github.com/crgjr66"><i class="fab fa-github"></i></a>
-                  <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/chuck-gilbreth-jr/"><i class="fab fa-linkedin-in"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://github.com/crgjr66" target="_blank"><i class="fab fa-github"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/chuck-gilbreth-jr/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
               <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <!-- <div class="col-lg-8 col-lg-offset-2 text-center"> -->
+                <div class="text-center">
                   <p class="large text-muted">
                     "I am a current student at the LEARN Academy in San Diego, CA, Studying Full-Stack Software Development.  I will be graduating in January and available for work at that time.  Up to this point we have studied/learned the following technologies: GIT/Github, HTML, CSS, Javascript, TDD, React, Ruby, Rails, and PostgreSQL."
                   </p>
@@ -360,8 +361,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left">Copyright © Chuck Gilbreth Jr. 2020</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                      <a class="btn btn-dark btn-social mx-2" href="https://github.com/crgjr66"><i class="fab fa-github"></i></a>
-                      <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/chuck-gilbreth-jr/"><i class="fab fa-linkedin-in"></i></a>
+                      <a class="btn btn-dark btn-social mx-2" href="https://github.com/crgjr66" target="_blank"><i class="fab fa-github"></i></a>
+                      <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/chuck-gilbreth-jr/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </div>
