update links for react apps

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                                     <!-- <p><strong>Github Repo:</strong><a href="https://github.com/jpletner/Rails-To-Do-App" target="_blank"> github.com/jpletner/Rails-To-Do-App</a></p>
                                     <p><strong>URL:</strong><a href="https://guarded-stream-2315.herokuapp.com/tasks" target="_blank"> Tic-Tac-Toe Game</a></p> -->
                                     <p><strong>Github Repo:</strong><a href="https://github.com/crgjr66/tic-tac-toe" target="_blank"> github.com/crgjr66/tic-tac-toe</a></p>
-                                    <p><strong>URL:</strong><a href="https://google.com" target="_blank"> Tic-Tac-Toe Game</a></p>
+                                    <p><strong>URL:</strong><a href="http://crgjr66.github.io/tic-tac-toe" target="_blank"> Tic-Tac-Toe Game</a></p>
                                     <ul class="list-inline">
                                        <li><strong>Date:</strong> September 2020</li>
                                        <li><strong>Setting:</strong> <a href="https://www.learnacademy.org/" target="_blank">Learn Academy Exercise</a></li>
@@ -419,7 +419,7 @@
                                     <!-- <p><strong>Github Repo:</strong><a href="https://github.com/jpletner/Rails-To-Do-App" target="_blank"> github.com/jpletner/Rails-To-Do-App</a></p>
                                     <p><strong>URL:</strong><a href="https://guarded-stream-2315.herokuapp.com/tasks" target="_blank"> Tic-Tac-Toe Game</a></p> -->
                                     <p><strong>Github Repo:</strong><a href="https://github.com/crgjr66/madlibs" target="_blank"> github.com/crgjr66/madlibs</a></p>
-                                    <p><strong>URL:</strong><a href="https://google.com" target="_blank"> Madlibs Word Game</a></p>
+                                    <p><strong>URL:</strong><a href="http://crgjr66.github.io/madlibs" target="_blank"> Madlibs Word Game</a></p>
                                     <ul class="list-inline">
                                        <li><strong>Date:</strong> September 2020</li>
                                        <li><strong>Setting:</strong> <a href="https://www.learnacademy.org/" target="_blank">Learn Academy Exercise</a></li>
