updated link for deployed rails app

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                                     <!-- <p><strong>Github Repo:</strong><a href="https://github.com/jpletner/Rails-To-Do-App" target="_blank"> github.com/jpletner/Rails-To-Do-App</a></p>
                                     <p><strong>URL:</strong><a href="https://guarded-stream-2315.herokuapp.com/tasks" target="_blank"> Tic-Tac-Toe Game</a></p> -->
                                     <p><strong>Github Repo:</strong><a href="https://github.com/crgjr66/baseball_blog" target="_blank"> github.com/crgjr66/baseball_blog</a></p>
-                                    <p><strong>URL:</strong><a href="https://google.com" target="_blank"> Baseball Blog</a></p>
+                                    <p><strong>URL:</strong><a href="https://crgjr66-baseball-blog.herokuapp.com/blogs" target="_blank"> Baseball Blog</a></p>
                                     <ul class="list-inline">
                                        <li><strong>Date:</strong> October 2020</li>
                                        <li><strong>Setting:</strong> <a href="https://www.learnacademy.org/" target="_blank">Learn Academy Exercise</a></li>
