add resume and email links

--- a/index.html
+++ b/index.html
@@ -321,11 +321,25 @@
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Me</h2>
-                    <h3 class="section-subheading text-muted">Let's Talk!</h3>
-                </div>
-                <form id="contactForm" name="sentMessage" novalidate="novalidate">
+              <div class="text-center">
+                  <h2 class="section-heading text-uppercase">Contact Me</h2>
+                  <h3 class="section-subheading text-muted">Let's Talk! VIA Email or download a copy of my resume below.</h3>
+              </div>
+              <div class="text-center">
+                  <h1 class="section-heading text-uppercase">
+                    <a href="mailto:chuckgilbreth@yahoo.com">Contact Via Email</a>
+                  </h1>
+              </div>
+              <div class="text-center">
+                  <h1 class="section-heading text-uppercase">
+                    <br>
+                    <br>
+                    <a href="assets/img/about/crgresume.pdf" download="resume" target="_blank">
+                        <img src="assets/img/about/resumelogo.jpeg" alt="resumelogo" width="200" height="200">
+                    </a>
+                  </h1>
+              </div>
+                <!-- <form id="contactForm" name="sentMessage" novalidate="novalidate">
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -352,7 +366,7 @@
                         <div id="success"></div>
                         <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send Message</button>
                     </div>
-                </form>
+                </form> -->
             </div>
         </section>
         <!-- Footer-->
