--- a/index.html
+++ b/index.html
@@ -112,52 +112,56 @@
            </div>
            <!--end row 1 of skills-->
            <div class="row text-center">
-           <!--row 2 of skills-->
-           <div class="col-md-3">
-              <div class="circleimg"><img src="assets/img/logos/ruby.png" height="70px" width ="70px"></div>
-              <h4 class="service-heading">Ruby</h4>
-              <!--                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
-           </div>
-           <div class="col-md-3">
-              <div class="circleimg"><img src="assets/img/logos/rails.png" height="70px" width ="70px"></div>
-              <h4 class="service-heading">Rails</h4>
-              <!--                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
-           </div>
-           <div class="col-md-3">
-              <div class="circleimg"><img src="assets/img/logos/sql.png" height="70px" width ="70px"></div>
-              <h4 class="service-heading">SQL</h4>
-              <!--                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
-           </div>
-           <div class="col-md-3">
-              <div class="circleimg"><img src="assets/img/logos/rspec.png" height="70px" width ="70px"></div>
-              <h4 class="service-heading">TDD - Rspec</h4>
-              <!--                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
+             <!--row 2 of skills-->
+             <div class="col-md-3">
+                <div class="circleimg"><img src="assets/img/logos/ruby.png" height="70px" width ="70px"></div>
+                <h4 class="service-heading">Ruby</h4>
+                <!--                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
+             </div>
+             <div class="col-md-3">
+                <div class="circleimg"><img src="assets/img/logos/rails.png" height="70px" width ="70px"></div>
+                <h4 class="service-heading">Rails</h4>
+                <!--                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
+             </div>
+             <div class="col-md-3">
+                <div class="circleimg"><img src="assets/img/logos/sql.png" height="70px" width ="70px"></div>
+                <h4 class="service-heading">SQL</h4>
+                <!--                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
+             </div>
+             <div class="col-md-3">
+                <div class="circleimg"><img src="assets/img/logos/rspec.png" height="70px" width ="70px"></div>
+                <h4 class="service-heading">TDD - Rspec</h4>
+                <!--                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
+             </div>
            </div>
            <!--end row 2 of skills-->
            <div class="row text-center">
-           <!--row 3 of skills-->
-           <div class="col-md-3">
-              <div class="circleimg"><img src="assets/img/logos/react.png" height="70px" width ="70px"></div>
-              <h4 class="service-heading">React</h4>
-              <!--                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
-           </div>
+             <!--row 3 of skills-->
+             <div class="col-md-3">
+                <div class="circleimg"><img src="assets/img/logos/react.png" height="70px" width ="70px"></div>
+                <h4 class="service-heading">React</h4>
+                <!--                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
+             </div>
 
-           <div class="col-md-3">
-              <div class="circleimg"><img src="assets/img/logos/postgres.png" height="70px" width ="70px"></div>
-              <h4 class="service-heading">PostgreSQL</h4>
-              <!--                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
-           </div>
+             <div class="col-md-3">
+                <div class="circleimg"><img src="assets/img/logos/postgres.png" height="70px" width ="70px"></div>
+                <h4 class="service-heading">PostgreSQL</h4>
+                <!--                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
+             </div>
 
-           <div class="col-md-3">
-              <div class="circleimg"><img src="assets/img/logos/c_c++.png" height="70px" width ="70px"></div>
-              <h4 class="service-heading">C/C++ Programming</h4>
-              <!--                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
+             <div class="col-md-3">
+                <div class="circleimg"><img src="assets/img/logos/c_c++.png" height="70px" width ="70px"></div>
+                <h4 class="service-heading">C/C++</h4>
+                <!--                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
+             </div>
+             <div class="col-md-3">
+                <div class="circleimg"><img src="assets/img/logos/arm.jpg" height="70px" width ="70px"></div>
+                <h4 class="service-heading">ARM</h4>
+                <!--                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
+             </div>
            </div>
-           <div class="col-md-3">
-              <div class="circleimg"><img src="assets/img/logos/arm.jpg" height="70px" width ="70px"></div>
-              <h4 class="service-heading">ARM Chipsets</h4>
-              <!--                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
-           </div>
+           <br>
+           <br>
         </section>
         <!-- Portfolio-->
         <section class="page-section" id="portfolio">
